chore: add `LOG_LEVEL` environment variable to `metan` deployment manifest

--- a/k8s/app/metan/templates/deployment.yaml
+++ b/k8s/app/metan/templates/deployment.yaml
@@ -61,6 +61,8 @@ spec:
               value: prod
             - name: APP_NAME
               value: METAN
+            - name: LOG_LEVEL
+              value: DEBUG
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
