chore: enhance `metan` securityContext and update worker command configuration

--- a/k8s/app/metan/values.yaml
+++ b/k8s/app/metan/values.yaml
@@ -42,8 +42,10 @@ podAnnotations:
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
 podLabels: { }
 
-podSecurityContext: { }
-# fsGroup: 2000
+podSecurityContext:
+  runAsUser: 1000
+  runAsGroup: 1000
+  fsGroup: 1000
 
 podEnv:
   BUILD_TIME: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.buildTime>
