--- a/k8s/app/metan/templates/deployment.yaml
+++ b/k8s/app/metan/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: [ "python", "-m", "metan.cli.main", "worker", "start" ]
+          command: [ "python", "-m", "metan.cli.main", "worker", "start", "--uid", "1000" ]
           workingDir: /app
           env:
             - name: BUILD_TIME
