chore: update RabbitMQ ingress host in Helm values configuration

--- a/k8s/app/db/values.yaml
+++ b/k8s/app/db/values.yaml
@@ -62,7 +62,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
   hosts:
-    - host: rabbitmq.dinhkhoile.com
+    - host: rabbitmq.bluestone.systems
       paths:
         - path: /
           pathType: Prefix
