--- a/k8s/app/metan/values.yaml
+++ b/k8s/app/metan/values.yaml
@@ -19,8 +19,8 @@ image:
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: [ ]
 # This is to override the chart name.
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: "metan-<+pipeline.variables.project_name>"
+fullnameOverride: "metan-<+pipeline.variables.project_name>"
 
 # This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
 serviceAccount:
