--- a/k8s/app/metan/templates/deployment.yaml
+++ b/k8s/app/metan/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
       initContainers:
         - name: init-container-check-host-mounted-ebs-volume
           image: busybox:1.37.0
-          command: [ 'sh', '-c', 'for i in $(seq 1 5); do echo "Checking attempt $i..."; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo "File found, exiting successfully."; exit 0; fi; echo "File not found, retrying..."; sleep 10; done; echo "File not found after 5 attempts, exiting with error."; exit 1' ]
+          command: [ "python", "-m", "metan.cli.main", "worker", "start"]
           volumeMounts:
             - name: host-volume
               mountPath: /host_ebs_volume
