--- a/k8s/app/jmeta/templates/ingress.yaml
+++ b/k8s/app/jmeta/templates/ingress.yaml
@@ -9,6 +9,7 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+    cert-manager.io/cluster-issuer: k8s-ca-issuer
 spec:
   {{- with .Values.ingress.className }}
   ingressClassName: {{ . }}
@@ -20,7 +21,8 @@ spec:
         {{- range .hosts }}
         - {{ . | quote }}
         {{- end }}
-      secretName: {{ include "jmeta.tlsSecretFullName" $ }}
+{{/*      secretName: {{ include "jmeta.tlsSecretFullName" $ }}*/}}
+      secretName: jmeta-tls-cert-manager-ca-issuer
     {{- end }}
   {{- end }}
   rules:
