--- a/k8s/app/whoami/templates/ingress.yaml
+++ b/k8s/app/whoami/templates/ingress.yaml
@@ -14,16 +14,16 @@ spec:
   {{- with .Values.ingress.className }}
   ingressClassName: {{ . }}
   {{- end }}
-  {{- if .Values.ingress.tls }}
-  tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ include "whoami.tlsSecretFullName" $ }}
-    {{- end }}
-  {{- end }}
+{{/*  {{- if .Values.ingress.tls }}*/}}
+{{/*  tls:*/}}
+{{/*    {{- range .Values.ingress.tls }}*/}}
+{{/*    - hosts:*/}}
+{{/*        {{- range .hosts }}*/}}
+{{/*        - {{ . | quote }}*/}}
+{{/*        {{- end }}*/}}
+{{/*      secretName: {{ include "whoami.tlsSecretFullName" $ }}*/}}
+{{/*    {{- end }}*/}}
+{{/*  {{- end }}*/}}
   rules:
     {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
