--- a/k8s/app/supabase-proxy/service.yaml
+++ b/k8s/app/supabase-proxy/service.yaml
@@ -1,13 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: node8000
+  name: supabase-proxy
 spec:
   selector:
-    app: node8000-proxy
+    app: supabase-proxy
   ports:
-    - name: http
-      port: 8000        # cổng mà Service expose trong cluster
-      targetPort: 18000 # cổng proxy đang nghe
+  - name: http-8000
+    port: 8000 # Cluster port for HTTP proxy
+    targetPort: 18000 # DaemonSet container port
+  - name: postgres-5432
+    port: 5432 # Cluster port for PostgreSQL
+    targetPort: 15432 # DaemonSet container port
   # Không bắt buộc, nhưng giữ traffic nội bộ
   internalTrafficPolicy: Local
