feat: add startupProbe configuration and update probe timings

--- a/k8s/app/jmeta/values.yaml
+++ b/k8s/app/jmeta/values.yaml
@@ -116,7 +116,7 @@ livenessProbe:
     path: /q/health/live
     port: http
   initialDelaySeconds: 20
-  periodSeconds: 10
+  periodSeconds: 30
   failureThreshold: 3
 
 readinessProbe:
@@ -124,8 +124,15 @@ readinessProbe:
     path: /q/health/ready
     port: http
   initialDelaySeconds: 10
-  periodSeconds: 5
+  periodSeconds: 30
   failureThreshold: 3
+
+startupProbe:
+  httpGet:
+    path: /q/health/ready
+    port: http
+  failureThreshold: 30
+  periodSeconds: 45
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
