--- a/k8s/app/jmeta/templates/deployment.yaml
+++ b/k8s/app/jmeta/templates/deployment.yaml
@@ -109,6 +109,10 @@ spec:
           readinessProbe:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- with .Values.startupProbe }}
+          startupProbe:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
